fixed alignment of social icons

--- a/styles/components/_social-icons.scss
+++ b/styles/components/_social-icons.scss
@@ -9,5 +9,8 @@
         padding: 1rem;
         background-color: #fff;
         border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
